--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>arcticb's hub</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -14,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm arcticb!</h1>
-				<p>My job is to maintain this job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
+				<p>I maintain this job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
