--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:arcticb@dismail.de">email</a></li>
-        		<li><a href="https://github.com/arcticb">github.com/arcticb</a></li>
+        		<li><a href="https://github.com/arcticbhub">github.com/arcticbhub</a></li>
 			</ul>
 		</footer>
 	</body>
