use default layout

--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>arcticb's hub</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/post">Post!</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm arcticb!</h1>
-				<p>I maintain this job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:arcticb@dismail.de">email</a></li>
-        		<li><a href="https://github.com/arcticbhub">github.com/arcticbhub</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: arcticb's hub
+---
+
+<div class="blurb">
+	<h1>Hi there, I'm arcticb!</h1>
+	<p>I maintain this job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
+</div><!-- /.blurb -->
