--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: arcticb's hub
+title: arcticbhub - crypto jobs
 ---
 
 <div class="blurb">
 	<h1>Hi there, I'm arcticb!</h1>
-	<p>I maintain this job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
+	<p>I maintain <em>arcticbhub<em>, the up-to-date job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
 </div><!-- /.blurb -->
