--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: arcticbhub - crypto jobs
 
 <div class="blurb">
 	<h1>Hi there, I'm arcticb!</h1>
-	<p>I maintain <em>arcticbhub<em>, the up-to-date job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
+	<p>I maintain <em>arcticbhub</em>, the up-to-date job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
 </div><!-- /.blurb -->
