--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,17 @@ layout: default
 title: arcticb - about
 ---
 
-# About
-
-arcticbhub is my pet project.
-
-Will add more details soon.
+<div class="about">
+    <h1>About</h1>
+    <p>arcticbhub is my pet project, dedicated to the crypto community.</p>
+    <p>You can post your job offer here or ask for one. As long as you accept some form of crypto as payment.<p>
+    <p>All posts are moderated and will be listed (if approved) in 2 - 24 hours under normal circumstances.</p>  
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <p><em>Note: posts related to illegal activities and known scams will not make it on the website. If you see anything fishy
+     please report it via email or pull it from the website's repository. 
+    </em></p>
+</div>
