new welcome message

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: arcticbhub - crypto jobs
 ---
 
 <div class="blurb">
-	<h1>Hi there, I'm arcticb!</h1>
-	<p>I maintain <em>arcticbhub</em>, the up-to-date job list for crypto enthusiasts. <a href="/about">Read more about arcticbhub...</a></p>
+	<h1>arcticbhub</h1>
+	<p>The up-to-date job list for crypto enthusiasts, maintained by <a href="/about">arcticb.</a></p>
 </div><!-- /.blurb -->
 
 <hr>
