add price tags to posts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ title: arcticbhub - crypto jobs
 
 {% assign sorted-posts = site.posts | where: "categories","job" %}
 {% for post in sorted-posts %}
-<li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+<li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> 
+	<span class="price">[{{ post.price }}]</span>
+</li>
 {% endfor %}
 </ul>
